# simple-health

./: .gitignore  .treefmt.toml  Cargo.toml  README.md  devenv.nix  flake.nix  module.nix
crates/simple-health-server/: Cargo.toml  build.rs  diesel.toml
crates/simple-health-server/migrations/: 20250907175144_initial_users.sql  20250907181211_initial_entry.sql  20250907182902_initial_session.sql  20250913072530_initial_activies.sql  20250923051400_initial_settings.sql  20250923053535_initial_goals.sql
crates/simple-health-server/src/: api.rs  auth.rs  base.rs  config.rs  crypto.rs  db.rs  main.rs  serve.rs  session.rs  utils.rs
crates/simple-health-server/src/api/: mod.rs
crates/simple-health-server/src/auth/: authenticate.rs  cookie.rs  jwt.rs
crates/simple-health-server/src/core/: types.rs
crates/simple-health-server/src/core/types/: activity.rs  goal.rs  meal.rs  settings.rs  user.rs
crates/simple-health-server/src/db/: postgresql.rs  schema.rs
crates/simple-health-server/src/utils/: dev.rs
frontend/: package.json
frontend/mobile/src/components/: Dashboard.tsx
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/: Dashboard.tsx
frontend/web/: CLAUDE.md  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/web/src/: api.ts  index.html  main.ts  types.ts
frontend/web/src/bindings/: Goal.ts
frontend/web/src/login/: index.html  login.ts
frontend/web/static/css/: styles.css
frontend/web/static/js/: dashboard.js  dashboard.js.map  login.js  login.js.map  profile.js  profile.js.map  signup.js  signup.js.map  utils.js  utils.js.map
frontend/web/static/js/bindings/: Activity.js  Activity.js.map  ActivityType.js  ActivityType.js.map  Goal.js  Goal.js.map  Meal.js  Meal.js.map  MealType.js  MealType.js.map  Signin.js  Signin.js.map  Signup.js  Signup.js.map  User.js  User.js.map  UserSetting.js  UserSetting.js.map
frontend/web/static/ts/: dashboard.ts  login.ts  profile.ts  signup.ts  types.ts  utils.ts
frontend/web/static/ts/bindings/: Activity.ts  ActivityType.ts  Goal.ts  Meal.ts  MealType.ts  (+4 more)
frontend/web/templates/: base.html.tera  dashboard.html.tera  login.html.tera  profile.html.tera  signup.html.tera
