[package]
name = "simple-health-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.12", features = ["postgres"] }
reqwest = "0.12.23"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.13"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
ts-rs = "11.0.1"
