[package]
name = "simple-health-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
inventory = "0.3.21"
reqwest = "0.12.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "time", "uuid", "chrono", "sqlite", "any"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
ts-rs = { version = "11.0.1", features = ["uuid", "uuid-impl"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
